Question - Behavior of array length property

--- a/1.html
+++ b/1.html
@@ -39,7 +39,9 @@
 				<h2 class="h3 col-12 mb-5">Accidental global variable</h2>
 				<div class="col-12 mb-3">
 					<h3 class="h4">Question</h3>
-					<p>To what evaluates <code>typeof a</code> and <code>typeof b</code> in the following snippet:</p>
+					<p>
+						To what evaluates <code>typeof a</code> and <code>typeof b</code> in the following snippet:
+					</p>
 <pre class="jumbotron"><code>
 function foo() {
    let a = b = 0;
