--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
 			<div class="row">
 				<h2 class="h3 col-12 mb-5">Table of Contents</h2>
 				<div class="col-12 mb-3">
-					<a href="1.html">1. Accidental global variable</a>
-				</div>
-				<!-- <div class="col-12 mb-3">
-					<a href="2.html">2.</a>
+					<p>
+						<a href="1.html">1. Accidental global variable</a>
+						<br>
+						<small class="ml-3">
+							Courtesy <a href="https://dmitripavlutin.com/" target="_blank">Dmitri Pavlutin</a>.
+							<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/">Original Article</a>.
+						</small>
+					</p>
 				</div>
 				<div class="col-12 mb-3">
+					<a href="2.html">2. Behavior of array length property</a>
+					<br>
+					<small class="ml-3">
+						Courtesy <a href="https://dmitripavlutin.com/" target="_blank">Dmitri Pavlutin</a>.
+						<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/">Original Article</a>.
+					</small>
+				</div>
+				<!-- <div class="col-12 mb-3">
 					<a href="3.html">3. </a>
 				</div>
 				<div class="col-12 mb-3">
