--- a/2.html
+++ b/2.html
@@ -36,7 +36,7 @@
 
 		<div class="container mt-5">
 			<div class="row">
-				<h2 class="h3 col-12 mb-5">Behavior of array length property</h2>
+				<h2 class="h3 col-12 mb-5">2. Behavior of array length property</h2>
 				<div class="col-12 mb-3">
 					<h3 class="h4">Question</h3>
 					<p>
