--- a/index.html
+++ b/index.html
@@ -21,105 +21,44 @@
 		<div class="container mt-5">
 			<div class="row">
 				<h2 class="h3 col-12 mb-5">Table of Contents</h2>
+
 				<div class="col-12 mb-3">
 					<p>
 						<a href="1.html">1. Accidental global variable</a>
 						<br>
 						<small class="ml-3">
 							Courtesy <a href="https://dmitripavlutin.com/" target="_blank">Dmitri Pavlutin</a>.
-							<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/">Original Article</a>.
+							<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/" target="_blank">Original Article</a>.
 						</small>
 					</p>
 				</div>
+
 				<div class="col-12 mb-3">
 					<a href="2.html">2. Behavior of array length property</a>
 					<br>
 					<small class="ml-3">
 						Courtesy <a href="https://dmitripavlutin.com/" target="_blank">Dmitri Pavlutin</a>.
-						<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/">Original Article</a>.
+						<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/" target="_blank">Original Article</a>.
 					</small>
 				</div>
-				<!-- <div class="col-12 mb-3">
-					<a href="3.html">3. </a>
-				</div>
+
 				<div class="col-12 mb-3">
-					<a href="4.html">4. </a>
+					<a href="3.html">3. Eagle eye test</a>
+					<br>
+					<small class="ml-3">
+						Courtesy <a href="https://dmitripavlutin.com/" target="_blank">Dmitri Pavlutin</a>.
+						<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/" target="_blank">Original Article</a>.
+					</small>
 				</div>
+
 				<div class="col-12 mb-3">
-					<a href="5.html">5. </a>
+					<a href="4.html">4. Automatic semicolon insertion</a>
+					<br>
+					<small class="ml-3">
+						Courtesy <a href="https://dmitripavlutin.com/" target="_blank">Dmitri Pavlutin</a>.
+						<a href="https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/" target="_blank">Original Article</a>.
+					</small>
 				</div>
-				<div class="col-12 mb-3">
-					<a href="6.html">6. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="7.html">7. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="8.html">8. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="9.html">9. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="10.html">10. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="11.html">11. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="12.html">12. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="13.html">13. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="14.html">14. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="15.html">15. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="16.html">16. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="17.html">17. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="18.html">18. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="19.html">19. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="20.html">20. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="21.html">21. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="22.html">22. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="23.html">23. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="24.html">24. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="25.html">25. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="26.html">26. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="27.html">27. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="28.html">28. </a>
-				</div>
-				<div class="col-12 mb-3">
-					<a href="29.html">29. </a>
-				</div> -->
 			</div>
 		</div>
 	</body>
